--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = [
 dependencies = [
     "tree-sitter==0.22.3",
     "tree-sitter-c==0.21.4",
+    "openai>=1.65.4",
+    "pebble>=5.1.0",
+    "httpx>=0.28.1",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
