--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "openai>=1.65.4",
     "pebble>=5.1.0",
     "httpx>=0.28.1",
+    "tqdm>=4.67.1",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
